# tppr

./: .env-example  .gitignore  README.md  SPRINT.md  launch.py  package.json  pyproject.toml  question_1.json  vitest.config.ts
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: codeql-config.yml
.github/scripts/: security_report.py
.github/workflows/: deploy-frontend.yml  security-scan.yml
backend/: README.md  pyproject.toml
backend/assets/: missing.html
backend/src/: admin.py  auth.py  db.py  jobs.py  main.py  questions.py  reports.py  seaweed.py  settings.py  share.py  shared.py  stars.py  storage.py  swagger.py  upload.py
backend/src/auth/: __init__.py  account.py  avatar_storage.py  db.py  management.py  supabase.py  supabase_admin.py  two_factor.py
backend/src/progress/: __init__.py  aggregations.py  models.py  routes.py
backend/src/questions/: db.py  endpoints.py  types.py  upload.py  utils.py
backend/src/social/: __init__.py  aggregations.py  db.py  models.py  routes.py  time.py
backend/src/stats/: __init__.py  routes.py
backend/tests/: test_question_verification.py  test_questions.py
deploy/: Dockerfile.digitalocean
deploy/functions/: README.md  project.yml
docs/: 2026SE_MajorProject_Thribhu.K.postman_collection.json  ADMIN.md  COPYRIGHT.md  DEPLOYMENT.md  DOCS.md  PROMPT.md  tppr-paper-meta.json  tppr-paper.json  tppr-question.json  workspace.code-workspace
docs/samples/: 2023_HSC_Business_Studies.json  2025_HSC_Maths_Extension_1.json  test.json
frontend/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  auth.tsx  client.ts  mistral-ocr.ts  papers.ts  progress.ts  reports.ts  social.ts  stars.ts  stats.ts
frontend/src/api/__tests__/: auth.test.tsx
frontend/src/components/: admin-sidebar.tsx  create-paper-dialog.tsx  editable-number.tsx  focus-mode.tsx  footer.tsx  login-form.tsx  math-text.tsx  navbar.tsx  paper-card.tsx  paper-settings.tsx  paper-verified-badge.tsx  presence-heartbeat.tsx  question-editor.tsx  question-sample.tsx  question.tsx  report-paper-button.tsx  signup-form.tsx  star-paper-button.tsx
frontend/src/lib/: api-url.ts  cloud.ts  hooks.ts  mistral-settings.ts  paper-fields.ts  paper-import.ts  paper.ts  parts.ts  routes.ts  subjects.tsx  supabase.ts
frontend/src/pages/: AdminTakedowns.tsx  AdminVerificationRequests.tsx  Dashboard.tsx  ForgotPassword.tsx  Friends.tsx  GenericError.tsx  Landing.tsx  Leaderboard.tsx  Login.tsx  PaperEditor.tsx  PaperEditorViewer.tsx  QuestionUpload.tsx  ResetPassword.tsx  Search.tsx  Settings.tsx  Signup.tsx  Unauthorised.tsx  UserProfile.tsx
frontend/src/types/: responses.ts  tppr-paper.ts
scripts/tppr-paper-utils/: pyproject.toml
scripts/tppr-paper-utils/src/: main.py
scripts/tppr-paper-utils/src/tppr_paper_utils/: __init__.py  extractor.py  img.py  mc.py  questions.py  text.py  visual.py
scripts/tppr-paper-utils/tests/: conftest.py  test_conversion.py
tppr-paper-extractor/: pyproject.toml
tppr-paper-extractor/samples/mistral/: 2021-hsc-mathematics-extension-1.json  2022-hsc-physics.json  BaulkhamHills.json
tppr-paper-extractor/samples/tppr/: 2021-hsc-mathematics-extension-1.tppr.json  2022-hsc-physics.tppr.json  BaulkhamHills.tppr.json
tppr-paper-extractor/src/tppr_paper_extractor/: __init__.py  __main__.py  extractor.py
tppr-paper-utils/: pyproject.toml
tppr-paper-utils/schema/: question_schema.json
tppr-paper-utils/src/: main.py
tppr-paper-utils/src/tppr_paper_utils/: __init__.py
tppr-paper-utils/src/tppr_paper_utils/providers/: __init__.py  mistral.py
(+18 files in other folders)
