[project]
name = "tppr-backend"
version = "0.1.0"
description = "backend for Thribhus Past Paper Repository (tppr)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=4.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-swagger-ui>=5.32.5",
    "imohash>=1.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
    "sqlmodel>=0.0.38",
    # "tppr-paper-utils",
    "typing>=3.10.0.0",
    "werkzeug>=3.1.8",
]

# [tool.uv.sources]
# tppr-paper-utils = { workspace = true }
