[project]
name = "tppr-paper-extractor"
version = "0.1.0"
description = "Convert Mistral OCR output into tppr paper JSON"
readme = "README.md"
authors = [
    { name = "Thribhu K", email = "4tkbytes@pm.me" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
