[project]
name = "tppr-paper-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thribhu K", email = "4tkbytes@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "mistralai>=2.4.7",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
]

[project.scripts]
tppr-paper-utils = "tppr_paper_utils:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)s:%(name)s:%(message)s"
